Fix overflow for spinner

--- a/spinner/spinner.css
+++ b/spinner/spinner.css
@@ -21,6 +21,9 @@ body {
 #chart svg g {
   cursor: pointer;
 }
+#chart svg {
+  overflow: visible;
+}
 
 @keyframes fadeInOpacity {
   0% {
